Se ha agregado la funcion de editar cada palabra del texto pero aún le falta arreglar errores como: 1) al momento de presionar el boton donde no se encuentra ningun sinonimo se seleccionan las palabras anteriores.Solucion: que no haga nada o que aparezca bloqueado este boton

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,97 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:orientation="vertical"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/btnnp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="20dp"
+        android:text="Crear un Proyecto..."
+        android:textSize="15sp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:text="cambia tu lexico"
+        android:textSize="20sp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ScrollView
+        android:id="@+id/vscroll1"
+        android:layout_width="wrap_content"
+        android:layout_height="603dp"
+        android:padding="8dp">
+
+        <LinearLayout
+            android:id="@+id/linear1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="14dp"
+            android:paddingTop="4dp">
+
+            <EditText
+                android:id="@+id/TextoCuerpo1"
+                android:layout_width="370dp"
+                android:layout_height="500dp"
+                android:layout_gravity="top"
+                android:layout_marginTop="0dp"
+                android:gravity="top"
+                android:hint="Escribe un solo parrafo"
+                android:padding="50dp"
+                android:textColor="#ffffff"
+                android:textColorHint="#607D8B"
+                android:textSize="12sp"
+                android:autofillHints=""
+
+                android:inputType="textMultiLine" />
+
+
+        </LinearLayout>
+
+    </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/linear2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-85dp"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <Button
+            android:id="@+id/btnextremo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:padding="8dp"
+            android:text="modo extremo"
+            android:textColor="#000000"
+            android:textSize="12sp" />
+        <Button
+            android:id="@+id/btnnormal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:padding="8dp"
+            android:text="modo normal"
+            android:textColor="#000000"
+            android:textSize="12sp" />
+        <Button
+            android:id="@+id/btnmanual"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:padding="8dp"
+            android:text="modo manual"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp" />
+
+    </LinearLayout>
+</LinearLayout>
