--- a/app/src/main/res/layout/activity_main_proyect.xml
+++ b/app/src/main/res/layout/activity_main_proyect.xml
@@ -7,7 +7,13 @@
     android:fitsSystemWindows="true"
     tools:context=".main_proyect">
 
+    <FrameLayout
 
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="56dp"
+/>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomnav"
         android:layout_width="match_parent"
