--- a/app/src/main/res/layout/fragment_conclusion.xml
+++ b/app/src/main/res/layout/fragment_conclusion.xml
@@ -22,6 +22,7 @@
             android:background="#2196F3"
             android:layout_marginTop="20dp"
             android:text="Guardar..."
+            android:textColor="#FFFFFF"
             android:textSize="15sp"/>
         <TextView
             android:layout_width="match_parent"
