--- a/app/src/main/res/layout/fragment_cuerpo.xml
+++ b/app/src/main/res/layout/fragment_cuerpo.xml
@@ -20,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#2196F3"
+            android:textColor="#FFFFFF"
             android:layout_marginTop="20dp"
             android:text="Guardar..."
             android:textSize="15sp"/>
