--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -20,10 +20,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#2196F3"
+            android:textColor="#FFFFFF"
             android:layout_marginTop="20dp"
             android:text="Guardar..."
             android:textSize="15sp"/>
         <TextView
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -47,7 +49,7 @@
                 android:paddingTop="4dp">
 
                 <EditText
-                    android:id="@+id/TextoCuerpointro"
+                    android:id="@+id/txv"
                     android:layout_width="370dp"
                     android:layout_height="400dp"
                     android:layout_gravity="top"
