--- a/app/src/main/res/layout/activity_introduccion_activity.xml
+++ b/app/src/main/res/layout/activity_introduccion_activity.xml
@@ -7,23 +7,36 @@
     android:orientation="vertical"
     >
 
-    <Button
-        android:id="@+id/btnnp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:textColor="#FFFFFF"
-        android:background="#2196F3"
-        android:text="Crear un Proyecto..."
-        android:textSize="15sp"/>
     <TextView
+        android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:gravity="center"
         android:layout_marginLeft="10dp"
+        android:text=""
+        android:textSize="20sp"/>
+
+    <LinearLayout
+        android:id="@+id/linear3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        android:layout_marginTop="-30dp"
+        android:orientation="horizontal"
+        >
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="65dp"
+        android:gravity="center"
+        android:layout_marginLeft="10dp"
         android:text="Introducción"
         android:textSize="20sp"/>
+
 
 
     <ScrollView
@@ -43,9 +56,9 @@
             <EditText
                 android:id="@+id/TextoINTRO"
                 android:layout_width="370dp"
-                android:layout_height="400dp"
+                android:layout_height="380dp"
                 android:layout_gravity="top"
-                android:layout_marginTop="0dp"
+                android:layout_marginTop="10dp"
                 android:autofillHints=""
                 android:gravity="top"
                 android:hint="Escribe un solo parrafo"
@@ -55,6 +68,16 @@
                 android:textColorHint="#607D8B"
 
                 android:textSize="25px" />
+            <TextView
+                android:id="@+id/printro"
+                android:textColor="#2196F3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="right"
+                android:layout_marginLeft="14dp"
+                android:text="Referencia"
+                android:textSize="14sp"/>
 
 
         </LinearLayout>
@@ -70,12 +93,24 @@
         android:orientation="horizontal"
         android:padding="8dp">
 
+
+        <Button
+            android:id="@+id/btnref"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:background="#764CD6"
+            android:onClick="guardar_referencia"
+            android:padding="8dp"
+            android:text="Guardar referencia"
+            android:textColor="#FFFFFF"
+            android:textSize="12sp" />
         <Button
             android:id="@+id/btnextremo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:background="#BF5636"
+            android:background="#289F5E"
             android:onClick="guardar"
             android:padding="8dp"
             android:text="Guardar"
@@ -88,21 +123,37 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:padding="8dp"
-            android:background="#34C53A"
-            android:text="modo manual"
+            android:background="#B8863B"
+            android:text="Cambiar el Léxico"
             android:textColor="#FFFFFF"
             android:textSize="12sp" />
 
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/vv"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="0dp"
+        android:gravity="left"
+        android:layout_marginLeft="10dp"
+        android:orientation="horizontal"
+        android:padding="3dp">
 
+
+        android:text="Guardar como nuevo punto de referencia"
+        android:textSize="14sp"/>
+
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/navv"
         android:layout_width="match_parent"
         android:layout_height="119dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="-35dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="8dp">
+
+
 
         <Button
             android:id="@+id/intro"
